<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preference_category_general">
        <rikka.preference.SimpleMenuPreference
            android:icon="@drawable/ic_dark_mode"
            android:entries="@array/theme_texts"
            android:title="@string/dark_theme"
            android:key="darkTheme"
            android:summary="%s"
            android:defaultValue="-1"
            android:entryValues="@array/theme_values" />
        <rikka.preference.SimpleMenuPreference
            android:icon="@drawable/ic_map_type"
            android:entries="@array/map_type"
            android:title="Map"
            android:key="map_type"
            android:summary="%s"
            android:defaultValue="1"
            android:dialogTitle="Map type"
            android:entryValues="@array/map_value" />
        <SwitchPreference
            android:icon="@drawable/ic_update"
            android:title="Check for updates"
            android:key="disable_update"
            android:summary="Automatically check for latest version on Github" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/xposed">
        <CheckBoxPreference
            android:icon="@drawable/ic_advance_hook"
            android:title="@string/advance_hook"
            android:key="isHookedSystem"
            android:summary="Hook system for better Location set you must select system" />
        <EditTextPreference
            android:icon="@drawable/ic_accuracy"
            android:digits="\ 0123456789"
            android:title="@string/settings_of_accuracy"
            android:key="accuracy_settings"
            android:summary="10 m."
            android:defaultValue="10" />
        <SwitchPreference
            android:icon="@drawable/ic_random_position"
            android:title="Random position"
            android:key="random_position"
            android:summary="Location position will be random around set location" />
    </PreferenceCategory>
</PreferenceScreen>